// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component when user is logged in 1`] = `
Array [
  .emotion-8 {
  position: relative;
  pointer-events: auto;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  font-weight: bold;
  line-height: 32px;
  white-space: nowrap;
  padding: 0 10px;
  margin: 0;
  border: none;
}

.emotion-3:hover {
  background-color: #eee;
}

.emotion-3:focus {
  outline-offset: -3px;
}

.emotion-0 {
  width: 48px;
  height: 48px;
  border-radius: 50%;
}

.emotion-1 {
  font-size: 12px;
  padding-left: 2px;
}

.emotion-6 {
  position: absolute;
  z-index: 100;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  background-color: white;
  border: solid #83d0f2 1.5px;
  box-shadow: 3px 3px 5px rgba(0,0,0,0.25);
  padding: 10px;
  min-width: 100%;
  right: 0;
  display: none;
}

.emotion-6 li {
  padding: 5px;
  white-space: nowrap;
}

.emotion-5 {
  border-width: 0;
  padding: 0;
  color: #3d7e9a;
  font-weight: normal;
}

.emotion-5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    className="emotion-8 emotion-9"
  >
    <button
      className="emotion-3 emotion-4"
      onClick={[Function]}
    >
      <img
        alt="test-username"
        className="emotion-0"
        src="test-url"
      />
      <span
        className="emotion-1 emotion-2"
      >
        ▼
      </span>
    </button>
    <ul
      className="dropdown-menu emotion-6 emotion-7"
    >
      <li>
        <a
          href="/en-US/profiles/test-username"
        >
          View profile
        </a>
      </li>
      <li>
        <a
          href="/en-US/profiles/test-username/edit"
        >
          Edit profile
        </a>
      </li>
      <li>
        <form
          action="/en-US/users/signout"
          method="post"
        >
          <input
            name="next"
            type="hidden"
            value="/"
          />
          <button
            className="emotion-5"
            type="submit"
          >
            Sign out
          </button>
        </form>
      </li>
    </ul>
  </div>,
  .emotion-0 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 8px;
  -ms-flex-preferred-size: 8px;
  flex-basis: 8px;
}

<div
    className="emotion-0 emotion-1"
    width={8}
  />,
  .emotion-0 {
  line-height: 1;
}

<a
    className="emotion-0"
    href="[fake edit url]"
    title="Edit this page"
  >
    <svg mock
      alt="Edit this page"
    />
  </a>,
]
`;

exports[`Login component when user is logged in 2`] = `
Array [
  .emotion-8 {
  position: relative;
  pointer-events: auto;
}

.emotion-0 {
  width: 48px;
  height: 48px;
  border-radius: 50%;
}

.emotion-1 {
  font-size: 12px;
  padding-left: 2px;
}

.emotion-5 {
  border-width: 0;
  padding: 0;
  color: #3d7e9a;
  font-weight: normal;
}

.emotion-5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 16px;
  font-weight: bold;
  line-height: 32px;
  white-space: nowrap;
  padding: 0 10px;
  margin: 0;
  border: none;
  background-color: #83d0f2;
}

.emotion-3:hover {
  background-color: #eee;
}

.emotion-3:focus {
  outline-offset: -3px;
}

.emotion-3:hover {
  background-color: #83d0f2;
}

.emotion-6 {
  position: absolute;
  z-index: 100;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  background-color: white;
  border: solid #83d0f2 1.5px;
  box-shadow: 3px 3px 5px rgba(0,0,0,0.25);
  padding: 10px;
  min-width: 100%;
  right: 0;
}

.emotion-6 li {
  padding: 5px;
  white-space: nowrap;
}

<div
    className="emotion-8 emotion-9"
  >
    <button
      className="emotion-3 emotion-4"
      onClick={null}
    >
      <img
        alt="test-username"
        className="emotion-0"
        src="test-url"
      />
      <span
        className="emotion-1 emotion-2"
      >
        ▲
      </span>
    </button>
    <ul
      className="dropdown-menu emotion-6 emotion-7"
    >
      <li>
        <a
          href="/en-US/profiles/test-username"
        >
          View profile
        </a>
      </li>
      <li>
        <a
          href="/en-US/profiles/test-username/edit"
        >
          Edit profile
        </a>
      </li>
      <li>
        <form
          action="/en-US/users/signout"
          method="post"
        >
          <input
            name="next"
            type="hidden"
            value="/"
          />
          <button
            className="emotion-5"
            type="submit"
          >
            Sign out
          </button>
        </form>
      </li>
    </ul>
  </div>,
  .emotion-0 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-flex-basis: 8px;
  -ms-flex-preferred-size: 8px;
  flex-basis: 8px;
}

<div
    className="emotion-0 emotion-1"
    width={8}
  />,
  .emotion-0 {
  line-height: 1;
}

<a
    className="emotion-0"
    href="[fake edit url]"
    title="Edit this page"
  >
    <svg mock
      alt="Edit this page"
    />
  </a>,
]
`;

exports[`Login component when user is not logged in 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  font-weight: bold;
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 48px;
  padding: 0 8px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #eee;
}

.emotion-1:focus {
  outline-offset: -3px;
}

.emotion-0 {
  margin-left: 5px;
}

<a
  className="emotion-1"
  data-service="GitHub"
  href="/users/github/login/?next=/"
  rel="nofollow"
>
  Sign in
   
  <svg mock
    className="emotion-0"
  />
</a>
`;
